--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,6 +52,8 @@ dependencies {
     implementation 'com.google.firebase:firebase-database-ktx'
     implementation 'com.google.firebase:firebase-storage-ktx:20.2.0'
     implementation 'com.github.bumptech.glide:glide:4.15.1'
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
+
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
