--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,6 +53,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-storage-ktx:20.2.0'
     implementation 'com.github.bumptech.glide:glide:4.15.1'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
+    implementation 'androidx.core:core:1.10.0'
 
 
     testImplementation 'junit:junit:4.13.2'
