can now edit items

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -51,5 +51,8 @@
         <activity android:name=".AddItemActivity"
             android:label="Add Item" />
 
+        <activity android:name=".EditItemActivity"
+            android:label="Edit Item" />
+
     </application>
 </manifest>
